--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,31 @@
   <head>
     <title>JavaScript Sandbox</title>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.5.1/css/all.css">
   </head>
-
   <body>
-      <h1>Welcome to The Vinci Code.</h1>
-      <section id="game">
-        
-      </section>
+    <header>
+      <div class="logo">
+        <img src="https://team.shiksha/images/fa-logo-green-bg.svg" alt="team-shiksha-logo">
+        <h1>Vinci Code Game</h1>
+      </div>
+      <div class="username-container">
+        <h3>Hello, <span class="username">Guest</span>! </h3>
+        <i class="fa-solid fa-pen-to-square" data-val="3"></i>
+      </div>
+    </header>
+      <div class="start-menu">
+        <h1 class="game-name">Number memory</h1>
+        <h2 class="game-description">
+              The average person can remember 7 numbers at once. Can you do more?
+         </h2>
+         <div class="game" id="game">
+          <button data-val="1" class="play-Btn">Play</button>
+          <div class="leaderboard">
+              <img data-val="2" src="./leaderboard.png" alt="leaderboard-icon">
+          </div>
+        </div>
+     </div>
     <script src="./index.mjs" type="module"></script>
   </body>
 </html>
